--- a/src/Makefile
+++ b/src/Makefile
@@ -55,7 +55,7 @@ BUILD_WEB_ASYNCIFY    ?= FALSE
 BUILD_WEB_SHELL       ?= minshell.html
 BUILD_WEB_HEAP_SIZE   ?= 134217728
 BUILD_WEB_RESOURCES   ?= TRUE
-BUILD_WEB_RESOURCES_PATH  ?= ../projects/VS2022/raylib_game/resources
+BUILD_WEB_RESOURCES_PATH  ?= resources
 
 # Use cross-compiler for PLATFORM_RPI
 ifeq ($(PLATFORM),PLATFORM_RPI)
