Moved from Visual Studio randomness to good reliable CMake

--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,6 @@
 
 # Kernel Module Compile Results
 *.mod*
-*.cmd
 .tmp_versions/
 modules.order
 Module.symvers
@@ -60,3 +59,4 @@ dkms.conf
 
 # Build folder
 [Bb]uild
+build-web
